# graph-analysis

./: .gitmodules  README.md
.github/workflows/: ci-gbtl-prim.yml
Sandia/: CMakeLists.txt  build.py  sandia_SuiteSparse.c  sandia_spla.cpp
prim/: prim_SuiteSparse.c  prim_gbtl.cpp  prim_spla.cpp
